<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/home_screen_bg_color"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg_color"
        android:text="@string/create_offer"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/create_offer_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_cornor"
                android:hint="@string/date"
                android:inputType="datetime"
                android:maxLines="3"
                android:minLines="2" />

            <EditText
                android:id="@+id/create_offer_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_cornor"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/create_offer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="top|left"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="3" />

    <RadioGroup
        android:id="@+id/create_offer_active_inactive_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_button_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/active" />

        <RadioButton
              android:id="@+id/radio_button_in_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/in_active" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center|left"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/create_offer_cb_zone1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zone1" />

        <CheckBox
            android:id="@+id/create_offer_cb_zone2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zone2" />

        <CheckBox
            android:id="@+id/create_offer_cb_zone3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zone3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center|left"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/create_offer_cb_zone4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zone4" />
    </LinearLayout>

   

</LinearLayout>
 
</ScrollView>
<Button
        android:id="@+id/create_offer_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/title_bg_color"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>