<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg_color"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:text="@string/merchant_id"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_alerts_listview_header_text" />

                <TextView
                    android:id="@+id/layout_offers_desc_end_date_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="*"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_red"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/layout_register_merchant_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Store ID"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_alerts_listview_header_text" />

                <TextView
                    android:id="@+id/layout_offers_desc_end_date_view0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:text="*"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/color_red"
                    android:textSize="16sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/layout_register_merchant_id_store_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                android:inputType="text" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_alerts_listview_header_text" />

        <TextView
            android:id="@+id/layout_offers_desc_end_date_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="*"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_red"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/layout_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:inputType="textEmailAddress" >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_alerts_listview_header_text" />

        <TextView
            android:id="@+id/layout_offers_desc_end_date_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="*"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_red"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/layout_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
         android:padding="10dp"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:layout_marginTop="10dp"
        android:text="User Name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_alerts_listview_header_text" />

    <EditText
        android:id="@+id/layout_register_username_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
         android:padding="10dp"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center"
        android:layout_marginTop="10dp"
        android:text="Phone No"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_alerts_listview_header_text" />

    <EditText
        android:id="@+id/layout_register_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
         android:padding="10dp"
        android:inputType="text|phone" >
    </EditText>

    <Button
        android:id="@+id/layout_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:gravity="left"
        android:minWidth="100dp"
        android:paddingLeft="10dp"
        android:text="Register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_buyopic_"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/layout_register_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:text="Login here"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>